--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <div class="nav container">
-            <a href="#" class="logo">Coffee House</a>
+            <a href="#home" class="logo">Coffee House</a>
 
             <div class="navbar">
                 <a href="#home" class="nav-link">Home</a>
@@ -39,7 +39,7 @@
         <div class="home-text">
             <h1>Datti la carica!<br />Caffè 100% Italiano</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque tempora iure magnam nobis, facilis, quisquam perferendis aperiam praesentium alias aliquam velit aut excepturi iste? Tempora vero sequi dolor rerum alias.</p>
-            <a href="#" class="btn">
+            <a href="#book" class="btn">
                 <span>Contattaci</span>
                 <i class='bx bx-up-arrow-alt'></i>
             </a>
