--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <div class="team-box">
                 <img src="images/team-2.png" alt="">
                 <h2>Marta Bianchi</h2>
-                <span>Incaricato al Trasporto di Macchina e Caffè</span>
+                <span>Incaricata al Trasporto di Macchina e Caffè</span>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, ullam. Dolores quaerat quia facilis ullam delectus officia nobis commodi nisi? In alias esse illum cupiditate labore repellendus voluptatum modi tempora!</p>
             </div>
 
